==> Shiina0907Chizuru/mobile-phone/指纹门禁系统验收版/lcd显示屏触摸屏成功--指纹门禁实验(4)/指纹模块实验/BaseDrive/bsp_as608.c <==
#include "stm32f4xx.h"
#include "bsp_as608.h"
#include "rx_data_queue.h"
#include "LCD.h"

void AS608_Config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure; 
	EXTI_InitTypeDef EXTI_InitStructure;
  USART_InitTypeDef USART_InitStructure;
  
	/*开启串口GPIO口的时钟*/
	RCC_AHB1PeriphClockCmd(AS608_TouchOut_INT_GPIO_CLK,ENABLE);
  /* 使能 SYSCFG 时钟 ，使用GPIO外部中断时必须使能SYSCFG时钟*/
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
  
  /*打开串口外设的时钟*/
  RCC_AHB1PeriphClockCmd(AS608_USART_RX_GPIO_CLK|AS608_USART_TX_GPIO_CLK,ENABLE);
  /* 使能 USART 时钟 */
  RCC_APB1PeriphClockCmd(AS608_USART_CLK, ENABLE);

												
	/* 配置 NVIC 中断*/
	NVIC_Configuration();
  
	/* TouchOut线用到的GPIO */	
  GPIO_InitStructure.GPIO_Pin = AS608_TouchOut_INT_GPIO_PIN;
  /* 配置为浮空输入 */	
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    /* 设置引脚不上拉也不下拉 */
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_Init(AS608_TouchOut_INT_GPIO_PORT, &GPIO_InitStructure);

	/* 选择EXTI的信号源 */
  SYSCFG_EXTILineConfig(AS608_TouchOut_INT_EXTI_PORTSOURCE, AS608_TouchOut_INT_EXTI_PINSOURCE); 
  EXTI_InitStructure.EXTI_Line = AS608_TouchOut_INT_EXTI_LINE;
	
	/* EXTI为中断模式 */
  EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	/* 上升/下降沿中断 */
  EXTI_InitStructure.EXTI_Trigger =EXTI_Trigger_Rising_Falling;
  /* 使能中断 */	
  EXTI_InitStructure.EXTI_LineCmd = ENABLE;
  EXTI_Init(&EXTI_InitStructure);
  
   
  /*USART GPIO初始化 */
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;  
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  
  /* 配置Tx引脚为复用功能  */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Pin = AS608_USART_TX_PIN  ;  
  GPIO_Init(AS608_USART_TX_GPIO_PORT, &GPIO_InitStructure);

  /* 配置Rx引脚为复用功能 */
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStructure.GPIO_Pin = AS608_USART_RX_PIN;
  GPIO_Init(AS608_USART_RX_GPIO_PORT, &GPIO_InitStructure);
  
 /* 连接 PXx 到 USARTx_Tx*/
  GPIO_PinAFConfig(AS608_USART_RX_GPIO_PORT,AS608_USART_RX_SOURCE,AS608_USART_RX_AF);

  /*  连接 PXx 到 USARTx__Rx*/
  GPIO_PinAFConfig(AS608_USART_TX_GPIO_PORT,AS608_USART_TX_SOURCE,AS608_USART_TX_AF);
  
  /* 配置串AS608_USART 模式 */
  /* 波特率设置：AS608_USART_BAUDRATE */
  USART_InitStructure.USART_BaudRate = AS608_USART_BAUDRATE;
  /* 字长(数据位+校验位)：8 */
  USART_InitStructure.USART_WordLength = USART_WordLength_8b;
  /* 停止位：1个停止位 */
  USART_InitStructure.USART_StopBits = USART_StopBits_1;
  /* 校验位选择：不使用校验 */
  USART_InitStructure.USART_Parity = USART_Parity_No;
  /* 硬件流控制：不使用硬件流 */
  USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
  /* USART模式控制：同时使能接收和发送 */
  USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
  /* 完成USART初始化配置 */
  USART_Init(AS608_USART, &USART_InitStructure); 
	
  /* 嵌套向量中断控制器NVIC配置 */
	NVIC_Configuration();
  
	/* 使能串口接收中断 */
	USART_ITConfig(AS608_USART, USART_IT_RXNE, ENABLE);
	USART_ITConfig(AS608_USART, USART_IT_IDLE, ENABLE ); /*使能串口总线空闲中断 */	

  /* 使能串口 */
  USART_Cmd(AS608_USART, ENABLE);
 	
}

static void AS608_SendData(uint8_t data)
{
  USART_SendData(AS608_USART,data);
  while(USART_GetFlagStatus(AS608_USART,USART_FLAG_TXE) == RESET);
}

uint16_t  ReturnFlag( uint16_t *i)
{
   QUEUE_DATA_TYPE *rx_data;
  
   rx_data = cbRead(&rx_queue);  /*从缓冲区读取数据，进行处理*/
    
   if(rx_data != NULL)           /*缓冲队列非空*/
  { 
		/*打印环行接收到的数据*/
    QUEUE_DEBUG_ARRAY((uint8_t*)rx_data->head,rx_data->len);
		
    *i=((uint16_t)(*(rx_data->head+9)));     /*确认码*/
		
	  cbReadFinish(&rx_queue);    /*使用完数据必须调用cbReadFinish更新读指针*/
	  
		return *i;
  }
	else
  {	
	  *i=0xff;
		
	  return *i;
  }
}

uint16_t PS_Connect(uint32_t *PS_Addr)
{
	QUEUE_DATA_TYPE *rx_data;	
	// printf("进入函数\r\n");
	AS608_PackHead();
	AS608_SendData(0X01);
	AS608_SendData(0X00);
	AS608_SendData(0X00);
	
    AS608_DELAY_MS(100);
	// printf("进入cbread函数前\r\n");
	rx_data = cbRead(&rx_queue);  /*从缓冲区读取数据，进行处理*/ 
    // printf("test\r\n");
	if(rx_data != NULL)           /*缓冲队列非空*/
	{ 
        // printf("test\r\n");
		/*打印环行接收到的数据*/
		QUEUE_DEBUG_ARRAY((uint8_t*)rx_data->head,rx_data->len);
		// printf("准备判断");
		if(/*判断是不是模块返回的应答包*/
   			*(rx_data->head)	== 0XEF
				  && *(rx_data->head+1)==0X01
				  && *(rx_data->head+6)==0X07)  
		  {
			AS608_INFO("指纹模块的地址为:0x%x%x%x%x\r\n",*(rx_data->head+2),
																						      *(rx_data->head+3),
																						      *(rx_data->head+4),
																					   	    *(rx_data->head+5));
		  }
			cbReadFinish(&rx_queue);  /*使用完数据必须调用cbReadFinish更新读指针*/
		  
			return 0;	
	}	
	
  return 1;		
}
